<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:onClick="onClick"
        android:layout_gravity="center"
        android:text="返回结果"
        android:layout_width="180dp"
        android:layout_height="80dp" />


</FrameLayout>